unpackaged/main/default/objects/CompanyInformation__c/CompanyInformation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Company Information</label>
</CustomObject>