unpackaged/main/default/objects/CompanyInformation__c/fields/VatNumber__c.field-meta.xml
<CustomField>
    <fullName>VatNumber__c</fullName>
    <label>VAT Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>